# bargain-hunter

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: aws-backup.yml  collect-strategies.yml  deploy-frontend.yml  hunt.yml  terraform-feedback.yml
aws/: .gitignore  README.md  build.sh  handler.py
aws/terraform/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
config/: settings.yaml
data/: .gitkeep  alert_state.json  deals_state.json
data/observations/: 2026-06-24.jsonl  (+8 more)
docs/: IMPLEMENTATION_PLAN.md  PRD.md  STRATEGY_PLAN.md  WEB_PLAN.md  cloudflare-vs-aws.md
feedback-worker/: README.md  wrangler.jsonc
frontend/: README.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  wrangler.toml
portal-worker/: package-lock.json  package.json  wrangler.jsonc
scripts/: migrate_feedback_db.py  setup_notion.py
terraform/: .gitignore  README.md  backend.hcl.example  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: test_categories.py  test_hot_routing.py  test_matching.py  test_notify_render.py  test_observations.py  test_onboarding_audit.py  test_onboarding_relevance.py  test_onboarding_tag_source.py  test_onboarding_validate.py  test_ozbargain.py  test_scoring.py  test_state.py  test_strategy_cleanup.py  test_strategy_ozb_comments.py  test_strategy_ozbargain_forum.py  test_strategy_reddit.py  test_strategy_store.py  test_strategy_validate.py  test_strategy_whirlpool.py
(+282 files in other folders)
