[project]
name = "bargain-hunter"
version = "0.1.0"
description = "Automated bargain detection and alerting (OzBargain + more), run on GitHub Actions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "defusedxml>=0.7",
  "notion-client>=2.2",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bargain_hunter"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# DTZ guards against naive datetimes — the system runs entirely on AET/UTC-aware time.
select = ["E", "F", "I", "UP", "B", "SIM", "DTZ"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
